# eprx_analyzer

./: .gcloudignore  .gitignore  README.md  app.yaml  pyproject.toml  requirements.txt
eprx_dashboard/: README.md  angular.json  package-lock.json  package.json
eprx_dashboard/src/: index.html
eprx_dashboard/src/app/: app.component.spec.ts  app.component.ts  app.routes.ts
eprx_dashboard/src/app/pages/heatmap/: heatmap.component.css  heatmap.component.html  heatmap.component.ts
eprx_dashboard/src/app/services/: heatmap.service.spec.ts  heatmap.service.ts
eprx_dashboard/src/environments/: environment.prod.ts  environment.ts
src/: analysis_tool.py  data_processing.py  main.py
src/utils/: logger.py
