[tool.poetry]
name = "erpx-analyzer"
version = "0.1.0"
description = ""
authors = ["AAA <b08106048@ntu.edu.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
seaborn = "^0.13.2"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
jinja2 = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
